@@ -1,1 +1,0 @@
-// weather-snowy.js
